<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="1dp"
                android:padding="5sp"
                android:textAlignment="center"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/userIdLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="2dp"
                android:padding="5sp"
                android:textAlignment="textStart"
                android:text="@string/user_id"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:autofillHints=""
                android:background="@drawable/input_background"
                android:ems="10"
                android:hint="@string/userId_placeholder"
                android:inputType="text"
                android:padding="15sp" />

            <TextView
                android:id="@+id/userStatusLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:padding="5sp"
                android:textAlignment="textStart"
                android:text="@string/user_status"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/userStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/input_background"
                android:hint="@string/userId_placeholder"
                android:padding="15sp"/>

            <TextView
                android:id="@+id/headerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:padding="5sp"
                android:textAlignment="textStart"
                android:text="@string/headers"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/header1Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:padding="5sp"
                android:textAlignment="textStart"
                android:text="@string/header1"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp">

                <EditText
                    android:id="@+id/header2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:hint="@string/header_title_placeholder"
                    android:inputType="text"
                    android:padding="15sp" />

                <EditText
                    android:id="@+id/header2_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:layout_marginStart="15sp"
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:hint="@string/header_value_placeholder"
                    android:inputType="text"
                    android:padding="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/header2Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp"
                android:padding="5sp"
                android:textAlignment="textStart"
                android:text="@string/header2"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp">

                <EditText
                    android:id="@+id/header1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:hint="@string/header_title_placeholder"
                    android:inputType="text"
                    android:padding="15sp" />

                <EditText
                    android:id="@+id/header1_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:layout_marginStart="15sp"
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:hint="@string/header_value_placeholder"
                    android:inputType="text"
                    android:padding="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="15sp"
                android:layout_marginTop="160sp"
                android:layout_gravity="bottom"
                android:background="@drawable/button_background"
                app:backgroundTint="@null"
                android:text="@string/submit"
                android:textSize="18sp"/>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>